--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   intl: ^0.19.0
   sqflite: ^2.3.3
   path: ^1.9.0
+  video_player: ^2.8.5
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
