--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,6 +39,13 @@
             "type": "dart"
         },
         {
+            "name": "Flutter Android TV Box (SA 2K TV)",
+            "program": "lib/main.dart",
+            "deviceId": "192.168.1.111:5555",
+            "request": "launch",
+            "type": "dart",
+        },
+        {
             "name": "Flutter Android TV Box (pendoox12)",
             "program": "lib/main.dart",
             "deviceId": "172.16.101.101:5555",
