--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   chewie: ^1.8.1
   carousel_slider: ^4.2.1
   flip_card: ^0.7.0
+  package_info_plus: ^8.0.0
+  rename_app: ^1.3.2
 
 dev_dependencies:
   flutter_test:
