--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flip_card: ^0.7.0
   package_info_plus: ^8.0.0
   rename_app: ^1.3.2
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
