--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   package_info_plus: ^8.0.0
   rename_app: ^1.3.2
   shared_preferences: ^2.2.3
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
